[package]
name = "adb-battery-wattage"
description = "ADB tool to get charging rate of an Android device connected via ADB"
license = "GPL-3.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["cargo", "derive"] }
derive_more = { version = "2.0.1", features = ["add"] }
stopwatch = "0.0.7"
uom = "0.36.0"

[profile.release]
lto = true